--- a/index.html
+++ b/index.html
@@ -1302,7 +1302,7 @@
                               />
                               <img
                                 class="mob-banner"
-                                src="assets/Artemis-Hospital-image-mob.webp"
+                                src="assets/mob-banner.png"
                               />
                             </picture>
                           </div>
