--- a/index.html
+++ b/index.html
@@ -3128,6 +3128,7 @@ body {
                         <button type="button" data-bs-target="#truhBannerCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
                         <button type="button" data-bs-target="#truhBannerCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
                         <button type="button" data-bs-target="#truhBannerCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                        <button type="button" data-bs-target="#truhBannerCarousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
                       </div>
                       
                       <!-- Carousel items -->
@@ -3143,6 +3144,35 @@ body {
                                       <source media="(max-width:767px)" srcset="" />
                                       <img class="truh-desktop-banner" src="assets/desk-banner/1.webp" alt="TruHealers Banner" />
                                       <img class="truh-mob-banner" src="assets/mob-banner/1.webp" alt="TruHealers Mobile Banner" />
+                                    </picture>
+                                  </div>
+                                  <div class="truh-banner-content">
+                                    <div class="truh-wrapper">
+                                      <div class="truh-banner-left">
+                                        <div class="truh-banner-text">
+                                          <h1>TruHealers- International Patients Department</h1>
+                                          <p>At TruHealers, we are committed to delivering exceptional medical care and making our international patients feel at home during their stay. Whether you're seeking a consultation, second opinion, or specialized medical treatment, our International Patients Department is here to ensure a seamless and supportive experience.</p>
+                                        </div>
+                                      </div>
+                                      <div class="truh-banner-right"></div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </span>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div class="carousel-item">
+                          <div class="truh-views-row">
+                            <div class="truh-views-field">
+                              <span class="truh-field-content">
+                                <div class="truh-banner-section">
+                                  <div class="truh-banner-img">
+                                    <picture>
+                                      <source media="(max-width:767px)" srcset="" />
+                                      <img class="truh-desktop-banner" src="assets/desk-banner/Apollo hospital banner.png" alt="Premier Healthcare Banner" />
+                                      <img class="truh-mob-banner" src="assets/mob-banner/Apollo Mobile banner (768 x 800 px).png" alt="Premier Healthcare Mobile Banner" />
                                     </picture>
                                   </div>
                                   <div class="truh-banner-content">
