--- a/index.html
+++ b/index.html
@@ -4405,7 +4405,7 @@ body {
                         
                         <div class="row ">
                             <div class="col-12">
-                                <h3 class="subtitle text-center mb-4">Cost Advantages: India vs. Western Countries</h3>
+                                <h3 class="subtitle text-center mb-4">Save up to 50% compared to US costs</h3>
                             </div>
                             
                             <div class="col-lg-4 mb-4">
@@ -4415,7 +4415,7 @@ body {
                                         <div class="mb-4">
                                             <div class="treatment-name mb-2">Coronary Artery Bypass</div>
                                             <ul class="mb-3">
-                                                <li>● Save up to 50% compared to US costs</li>
+                                                <!-- <li>● Save up to 50% compared to US costs</li> -->
                                                 <li>● World-class cardiac facilities</li>
                                                 <li>● Experienced cardiologists with international training</li>
                                                 <li>● Significantly shorter waiting times</li>
