--- a/index.html
+++ b/index.html
@@ -4405,7 +4405,8 @@ body {
                         
                         <div class="row ">
                             <div class="col-12">
-                                <h3 class="subtitle text-center mb-4">Save up to 50% compared to US costs</h3>
+                                <h3 class="subtitle text-center mb-4">Cost Advantage:  India vs Western Countries </h3>
+                                <h4 class="subtitle text-center ">Save upto 50% cost compared to US costs</h4>
                             </div>
                             
                             <div class="col-lg-4 mb-4">
