--- a/index.html
+++ b/index.html
@@ -3791,10 +3791,10 @@ body {
                             <span class="field-content"
                               ><a
                                 ><img
-                                  src="assets/icons/Cardiac Sciences.png"
+                                  src="assets/icons-t/Cardiology.svg.png"
                                 />
                                 <span class="spec-name"
-                                  >Cardiac Sciences</span
+                                  >Cardiology</span
                                 ></a
                               >
                             </span>
@@ -3819,10 +3819,10 @@ body {
                             <span class="field-content"
                               ><a
                                 ><img
-                                  src="assets/icons/Radiation Oncology.png"
+                                  src="assets/icons-t/Bariatric-Surgery-1.svg.png"
                                 />
                                 <span class="spec-name"
-                                  >Radiation Oncology</span
+                                  >Bariatric-Surgery</span
                                 ></a
                               >
                             </span>
@@ -3833,10 +3833,10 @@ body {
                             <span class="field-content"
                               ><a
                                 ><img
-                                  src="assets/icons/surgical Oncology.png"
+                                  src="assets/icons-t/Critical-Care.svg.png"
                                 />
                                 <span class="spec-name"
-                                  >Surgical Oncology</span
+                                  >Critical-Care</span
                                 ></a
                               >
                             </span>
@@ -3846,7 +3846,7 @@ body {
                           <div class="views-field views-field-name">
                             <span class="field-content"
                               ><a
-                                ><img src="assets/icons/ENT.png" />
+                                ><img src="assets/icons-t/ENT.svg.png" />
                                 <span class="spec-name">ENT</span></a
                               >
                             </span>
@@ -3857,7 +3857,7 @@ body {
                             <span class="field-content"
                               ><a
                                 ><img
-                                  src="assets/icons/Gastroenterology.png"
+                                  src="assets/icons-t/Gastroenterology-1.svg.png"
                                 />
                                 <span class="spec-name"
                                   >Gastroenterology</span
@@ -3885,7 +3885,7 @@ body {
                             <span class="field-content"
                               ><a
                                 ><img
-                                  src="assets/icons/Haematology and BMT.png"
+                                  src="assets/icons-t/Hematology-BMT.svg.png"
                                 />
                                 <span class="spec-name"
                                   >Haematology and BMT</span
@@ -3899,10 +3899,10 @@ body {
                             <span class="field-content"
                               ><a
                                 ><img
-                                  src="assets/icons/Heart Transplant.png"
+                                  src="assets/icons-t/General-Medicine.svg.png"
                                 />
                                 <span class="spec-name"
-                                  >Heart Transplant</span
+                                  >General-Medicine</span
                                 ></a
                               >
                             </span>
@@ -3913,10 +3913,10 @@ body {
                             <span class="field-content"
                               ><a
                                 ><img
-                                  src="assets/icons/Kidney Transplant.png"
+                                  src="assets/icons-t/General-surgery.svg.png"
                                 />
                                 <span class="spec-name"
-                                  >Kidney Transplant</span
+                                  >General Surgery</span
                                 ></a
                               >
                             </span>
@@ -3927,7 +3927,7 @@ body {
                             <span class="field-content"
                               ><a
                                 ><img
-                                  src="assets/icons/Liver Transplant.png"
+                                  src="assets/icons-t/Liver-Transplant-8.png.png"
                                 />
                                 <span class="spec-name"
                                   >Liver Transplant</span
@@ -3941,7 +3941,7 @@ body {
                             <span class="field-content"
                               ><a
                                 ><img
-                                  src="assets/icons/Lung Transplant.png"
+                                  src="assets/icons-t/Lung-Transplant.png.png"
                                 />
                                 <span class="spec-name"
                                   >Lung Transplant</span
@@ -3992,6 +3992,31 @@ body {
                                   src="assets/icons/Pulmonology.png"
                                 />
                                 <span class="spec-name">Pulmonology</span></a
+                              >
+                            </span>
+                          </div>
+                          
+                        </li>
+                        <li>
+                          <div class="views-field views-field-name">
+                            <span class="field-content"
+                              ><a
+                                ><img
+                                  src="assets/icons-t/Nephrology-1.svg.png"
+                                />
+                                <span class="spec-name">Nephrology</span></a
+                              >
+                            </span>
+                          </div>
+                        </li>
+                        <li>
+                          <div class="views-field views-field-name">
+                            <span class="field-content"
+                              ><a
+                                ><img
+                                  src="assets/icons-t/Opthalmology.svg.png"
+                                />
+                                <span class="spec-name">Opthalmology</span></a
                               >
                             </span>
                           </div>
