--- a/index.html
+++ b/index.html
@@ -3441,7 +3441,7 @@ body {
                                   <div class="truh-banner-img">
                                     <picture>
                                       <source media="(max-width:767px)" srcset="" />
-                                      <img class="truh-desktop-banner" src="assets/desk-banner/1.webp" alt="TruHealers Banner" />
+                                      <img class="truh-desktop-banner" src="assets/desk-banner/APOLLO.webp" alt="TruHealers Banner" />
                                       <img class="truh-mob-banner" src="assets/mob-banner/APOLLO.webp" alt="TruHealers Mobile Banner" />
                                     </picture>
                                   </div>
@@ -3470,7 +3470,7 @@ body {
                                   <div class="truh-banner-img">
                                     <picture>
                                       <source media="(max-width:767px)" srcset="" />
-                                      <img class="truh-desktop-banner" src="assets/desk-banner/2.webp" alt="Premier Healthcare Banner" />
+                                      <img class="truh-desktop-banner" src="assets/desk-banner/ARTEMIS.webp" alt="Premier Healthcare Banner" />
                                       <img class="truh-mob-banner" src="assets/mob-banner/2.webp" alt="Premier Healthcare Mobile Banner" />
                                     </picture>
                                   </div>
@@ -3500,7 +3500,7 @@ body {
                                   <div class="truh-banner-img">
                                     <picture>
                                       <source media="(max-width:767px)" srcset="" />
-                                      <img class="truh-desktop-banner" src="assets/desk-banner/3.webp" alt="Premier Healthcare Banner" />
+                                      <img class="truh-desktop-banner" src="assets/desk-banner/FORTIS.webp" alt="Premier Healthcare Banner" />
                                       <img class="truh-mob-banner" src="assets/mob-banner/3.webp" alt="Premier Healthcare Mobile Banner" />
                                     </picture>
                                   </div>
@@ -3530,7 +3530,7 @@ body {
                                   <div class="truh-banner-img">
                                     <picture>
                                       <source media="(max-width:767px)" srcset="" />
-                                      <img class="truh-desktop-banner" src="assets/desk-banner/4.webp" alt="Premier Healthcare Banner" />
+                                      <img class="truh-desktop-banner" src="assets/desk-banner/MAX.webp" alt="Premier Healthcare Banner" />
                                       <img class="truh-mob-banner" src="assets/mob-banner/4.webp" alt="Premier Healthcare Mobile Banner" />
                                     </picture>
                                   </div>
@@ -3560,7 +3560,7 @@ body {
                                   <div class="truh-banner-img">
                                     <picture>
                                       <source media="(max-width:767px)" srcset="" />
-                                      <img class="truh-desktop-banner" src="assets/desk-banner/5.webp" alt="Health Journey Banner" />
+                                      <img class="truh-desktop-banner" src="assets/desk-banner/YASHODA.webp" alt="Health Journey Banner" />
                                       <img class="truh-mob-banner" src="assets/mob-banner/YASHODA.webp" alt="Health Journey Mobile Banner" />
                                     </picture>
                                   </div>
